#Add Docker Compose integration and update CORS policy
-- Program.cs: Updated CORS policy to allow localhost origins.
- launchSettings.json: Added sslPort, httpPort, and Docker Compose profile.
- Chatterbox.sln: Updated project format and added Docker Compose project.
- docker-compose.dcproj: Added Docker Compose project file.
- docker-compose.override.yml: Configured environment variables, ports, and volumes.
- docker-compose.yml: Defined services for chatterbox.web and frontend.
- Dockerfile: Added multi-stage build for React frontend with Node.js and NGINX.

--- a/Chatterbox.Web/Chatterbox.Web.csproj
+++ b/Chatterbox.Web/Chatterbox.Web.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>6feecc1b-d5dc-429e-b3dc-daa445102ca1</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
